# bitlight-local-env-public

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose-lnd.yml  docker-compose.yml
.github/workflows/: test.yml
docker/: docker-compose.base.yaml
docker/bitcoin/cli/: active.sh
docker/esplora/: Dockerfile
docker/esplora-api/: Dockerfile
docker/lnd/: .dockerignore  Dockerfile  README.md  start-lnd.sh
docker/mining/scripts/: generating_blocks.sh
docker/wallet/: Dockerfile  start-wallet.sh
docs/: Makefile  README.md  next.config.js  package.json  pnpm-lock.yaml  theme.config.tsx
docs/pages/: _meta.json  index.mdx
docs/pages/posts/: _meta.json  setup-local-development-env-regtest.mdx
scripts/: env.sh  network-down.sh  network-up.sh
src/: api_commands.rs  blockchain_commands.rs  main.rs
tests/: e2e.rs
