[package]
name = "bitlight-local-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.113"

[dev-dependencies]
assert_cmd = "2.0.13"
