[package]
name = "bitlight-local-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
